hw1: Beans have been added in BotConfig.java